--- a/IA.WebApp/src/assets/scss/now-ui-dashboard/_variables.scss
+++ b/IA.WebApp/src/assets/scss/now-ui-dashboard/_variables.scss
@@ -56,10 +56,10 @@ $success-states-color: lighten($success-color, 6%) !default;
 $success-color-opacity: rgba(24, 206, 15, 0.3) !default;
 $success-color-alert: rgba(24, 206, 15, 0.8) !default;
 
-$info-color: #2ca8ff !default;
+$info-color: #ff2c2c !default;
 $info-states-color: lighten($info-color, 6%) !default;
-$info-color-opacity: rgba(44, 168, 255, 0.3) !default;
-$info-color-alert: rgba(44, 168, 255, 0.8) !default;
+$info-color-opacity: rgba(255, 44, 44, 0.3) !default;
+$info-color-alert: rgba(255, 44, 44, 0.8) !default;
 
 $warning-color: #ffb236 !default;
 $warning-states-color: lighten($warning-color, 6%) !default;
